# fluxions-gte

./: CMakeLists.txt  Makefile  README.md  fluxions-gte.sln  fluxions-gte.vcxproj  fluxions-gte.vcxproj.filters
fluxions-gte-tests/: fluxions-gte-tests.cpp  fluxions-gte-tests.vcxproj  fluxions-gte-tests.vcxproj.filters  test_gte_quaternions.cpp
include/: fluxions_fileio.hpp  fluxions_gte.hpp  fluxions_gte_base.hpp  fluxions_gte_bounding_box.hpp  fluxions_gte_catmull_rom.hpp  fluxions_gte_color3.hpp  fluxions_gte_color4.hpp  fluxions_gte_color_math.hpp  fluxions_gte_colors.hpp  fluxions_gte_common_vector.hpp  fluxions_gte_extra.hpp  fluxions_gte_geometric_algebra.hpp  fluxions_gte_image.hpp  fluxions_gte_image_operations.hpp  fluxions_gte_iostream.hpp  fluxions_gte_math.hpp  fluxions_gte_matrix2.hpp  fluxions_gte_matrix3.hpp  fluxions_gte_matrix4.hpp  fluxions_gte_matrix_extra.hpp  fluxions_gte_matrix_math.hpp  fluxions_gte_matrix_stack.hpp  fluxions_gte_noise.hpp  fluxions_gte_plane.hpp  fluxions_gte_quaternion.hpp  fluxions_gte_ray.hpp  fluxions_gte_ray_tracing.hpp  fluxions_gte_rect.hpp  fluxions_gte_scalar.hpp  fluxions_gte_scalar_math.hpp  fluxions_gte_shading.hpp  fluxions_gte_spherical_harmonic.hpp  fluxions_gte_stdcxx.hpp  fluxions_gte_superquadric.hpp  fluxions_gte_transformation.hpp  fluxions_gte_vector2.hpp  fluxions_gte_vector3.hpp  fluxions_gte_vector4.hpp  fluxions_gte_vector_math.hpp
src/: fluxions-gte.cpp  fluxions_fileio.cpp  fluxions_gte.cpp  fluxions_gte_bounding_box.cpp  fluxions_gte_color3.cpp  fluxions_gte_color4.cpp  fluxions_gte_color_tests.cpp  fluxions_gte_geometric_algebra.cpp  fluxions_gte_image.cpp  fluxions_gte_image_operations.cpp  fluxions_gte_iostream.cpp  fluxions_gte_math.cpp  fluxions_gte_matrix2.cpp  fluxions_gte_matrix3.cpp  fluxions_gte_matrix4.cpp  fluxions_gte_matrix_extra.cpp  fluxions_gte_matrix_stack.cpp  fluxions_gte_pch.hpp  fluxions_gte_quaternion.cpp  fluxions_gte_ray.cpp  fluxions_gte_rect.cpp  fluxions_gte_scalar.cpp  fluxions_gte_spherical_harmonic.cpp  fluxions_gte_superquadric.cpp  fluxions_gte_transformation.cpp  fluxions_gte_vector2.cpp  fluxions_gte_vector3.cpp  fluxions_gte_vector4.cpp
